--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Guess The Number</title>
+    <title>Guessing game</title>
     <link rel="stylesheet" href="app.css" />
   </head>
   <body>
